--- a/package.json
+++ b/package.json
@@ -43,7 +43,19 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {},
+    "rules": {
+      "quotes": [
+        1,
+        "double",
+        {
+          "avoidEscape": true
+        }
+      ],
+      "comma-dangle": [
+        "error",
+        "never"
+      ]
+    },
     "overrides": [
       {
         "files": [
