--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^7.21.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
     "vue": "^3.0.0-0"
